syntax = "proto3";

package com.webank.wedpr.anonymous_auction.proto;
option java_package = "com.webank.wedpr.anonymousauction.proto";
option java_multiple_files = true;

// An example structure describing auction item.
message AuctionItem {
    string title = 1;
    string description = 2;
}
